Actualizacion con 0 errores en compilacion. Revision de porqué solo abre login y luego termina.