@@ -1,11 +1,16 @@
 package com.iesaguadulce.agilteammanager.controller.ui.dashboard;
 
+import com.iesaguadulce.agilteammanager.config.SpringContext;
+import com.iesaguadulce.agilteammanager.controller.ui.perfil.MisTareasController;
+import com.iesaguadulce.agilteammanager.model.personas.Persona;
+import com.iesaguadulce.agilteammanager.service.seguridad.PermisoService;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Node;
 import javafx.scene.Scene;
 import javafx.scene.control.Alert;
+import javafx.scene.control.Button;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.Label;
 import javafx.scene.control.Tooltip;
@@ -21,8 +26,11 @@ import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
+import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * MainController — Controlador principal de la ventana de la aplicación.
@@ -32,6 +40,7 @@ import java.util.Optional;
  *  - Gestionar la navegación lateral cargando FXMLs en el AnchorPane central
  *  - Controlar los iconos de la cabecera (About, Salir)
  *  - Actualizar el pie de página con estado de conexión y hora de sesión
+ *  - Aplicar visibilidad de opciones del menú según permisos del rol
  */
 @Component
 public class MainController {
@@ -40,57 +49,50 @@ public class MainController {
     // CABECERA
     // ─────────────────────────────────────────────────────────
 
-    /** Muestra la ruta de navegación actual: > INICIO > PROFESIONALES, etc. */
-    @FXML private Label lbl_path_in_app;
-
-    /** Avatar del usuario logueado */
+    @FXML private Label    lbl_path_in_app;
     @FXML private ImageView img_user;
-
-    /** Nombre del usuario logueado */
-    @FXML private Label lbl_user;
-
-    /** Rol profesional del usuario (ADMIN, JEFE_PROYECTO, USUARIO) */
-    @FXML private Label lbl_system_group;
-
-    /** Fecha del día formateada */
-    @FXML private Label lbl_date;
-
-    /**
-     * Icono de estado de la BD en la cabecera.
-     * Rojo = sin conexión | Verde = conectado.
-     * SOLO INFORMATIVO — no tiene acción de clic.
-     */
+    @FXML private Label    lbl_user;
+    @FXML private Label    lbl_system_group;
+    @FXML private Label    lbl_date;
     @FXML private ImageView img_db_status;
-
-    /** Icono de información (abre AboutView) */
     @FXML private ImageView img_about;
-
-    /** Icono de salida (cierra la aplicación) */
     @FXML private ImageView img_exit;
 
     // ─────────────────────────────────────────────────────────
     // ÁREA CENTRAL
     // ─────────────────────────────────────────────────────────
 
-    /** Contenedor central donde se cargan dinámicamente las vistas FXML */
     @FXML private AnchorPane contentArea;
 
     // ─────────────────────────────────────────────────────────
     // PIE DE PÁGINA
     // ─────────────────────────────────────────────────────────
 
-    /** Icono de estado de BD en el footer */
     @FXML private ImageView img_footer_db_status;
-
-    /** Texto de estado de conexión a la BD */
-    @FXML private Label lbl_status_conection;
-
-    /** Texto con la hora en que el usuario inició sesión */
-    @FXML private Label lbl_status_conected;
+    @FXML private Label     lbl_status_conection;
+    @FXML private Label     lbl_status_conected;
 
     // ─────────────────────────────────────────────────────────
-    // DATOS DE SESIÓN (se setean desde el controlador de Login)
+    // BOTONES DEL MENÚ LATERAL (para control de permisos)
     // ─────────────────────────────────────────────────────────
+
+    @FXML private Button btn_inicio;
+    @FXML private Button btn_roles;
+    @FXML private Button btn_competencias;
+    @FXML private Button btn_profesionales;
+    @FXML private Button btn_proyectos;
+    @FXML private Button btn_proy_motor;
+    @FXML private Button btn_my_tareas;
+    @FXML private Button btn_admin_user;
+    @FXML private Button btn_admin_roles;
+    @FXML private Button btn_configuration;
+
+    // ─────────────────────────────────────────────────────────
+    // DATOS DE SESIÓN
+    // ─────────────────────────────────────────────────────────
+
+    /** Objeto Persona completo del usuario logueado (necesario para MisTareas y permisos) */
+    private Persona personaEnSesion;
 
     private String  nombreUsuario = "Usuario";
     private String  rolUsuario    = "ROL";
@@ -98,49 +100,46 @@ public class MainController {
     private boolean esAdmin       = false;
 
     // ─────────────────────────────────────────────────────────
-    // RUTAS FXML DE LAS VISTAS (centralizado para fácil mantenimiento)
+    // SERVICIOS (cargados manualmente desde Spring)
     // ─────────────────────────────────────────────────────────
 
-    // Dashboards de inicio (rol-dependientes)
+    private PermisoService permisoService;
+
+    // ─────────────────────────────────────────────────────────
+    // RUTAS FXML
+    // ─────────────────────────────────────────────────────────
+
     private static final String FXML_DASHBOARD_ADMIN = "/views/dashboard/DashboardAdminView.fxml";
     private static final String FXML_DASHBOARD_USER  = "/views/dashboard/DashboardView.fxml";
     private static final String FXML_ABOUT           = "/views/aboutView.fxml";
 
-    // Secciones del menú de navegación
-
-    // Submenú PROFESIONALES /views/personas/
     private static final String FXML_ROLES           = "/views/profesionales/RolesProfesionalesView.fxml";
     private static final String FXML_COMPETENCIAS    = "/views/profesionales/CompetenciasView.fxml";
     private static final String FXML_PROFESIONALES   = "/views/profesionales/PersonasView.fxml";
 
-    // Submenú PROYECTOS /views/proyectos/
     private static final String FXML_PROYECTOS       = "/views/proyectos/ProyectosTareasView.fxml";
     private static final String FXML_MOTOR           = "/views/proyectos/MotorAsignacionView.fxml";
 
-    // Submenú PROYECTOS /views/proyectos/
     private static final String FXML_MIS_TAREAS      = "/views/perfil/MisTareasView.fxml";
 
-    // Submenú PROYECTOS /views/proyectos/
     private static final String FXML_USUARIOS        = "/views/seguridad/UsuariosView.fxml";
     private static final String FXML_ROLES_SISTEMA   = "/views/seguridad/RolesPermisosView.fxml";
-    private static final String FXML_PERMISOS        = "/views/seguridad/RolesPermisosView.fxml";
 
-    // Submenú PROYECTOS /views/proyectos/
     private static final String FXML_CONFIGURACION   = "/views/configuracion/ConfiguracionView.fxml";
 
     // ─────────────────────────────────────────────────────────
-    // INICIALIZACIÓN — JavaFX llama a este método automáticamente
+    // INICIALIZACIÓN
     // ─────────────────────────────────────────────────────────
 
     @FXML
     public void initialize() {
-        // Tooltips en código (ImageView no admite <tooltip> en FXML)
+        // Cargamos el servicio de permisos desde Spring
+        permisoService = SpringContext.getBean(PermisoService.class);
+
         Tooltip.install(img_db_status, new Tooltip("Estado de la conexión a la BD"));
         Tooltip.install(img_about,     new Tooltip("Acerca de AgilTeam Manager"));
         Tooltip.install(img_exit,      new Tooltip("Cerrar sesión y salir"));
 
-        // La cabecera y footer se actualizan con valores vacíos por defecto.
-        // El contenido real se carga cuando LoginController llama a iniciarSesion().
         actualizarCabecera();
         actualizarFooter();
     }
@@ -151,21 +150,27 @@ public class MainController {
 
     /**
      * LoginController llama a este método justo después de cargar MainView.fxml.
-     * Recibe los datos de sesión e inicia la vista central según el rol del usuario.
+     * Ahora recibe el objeto Persona completo para poder:
+     *   1. Mostrar nombre y rol en la cabecera
+     *   2. Cargar los permisos y ajustar la visibilidad del menú
+     *   3. Pasarle el objeto al controlador de "Mis Tareas"
      *
-     * @param nombre   Nombre completo del usuario logueado
-     * @param rol      Nombre del rol de sistema (ej: "ADMIN", "JEFE_PROYECTO")
+     * @param persona  Objeto Persona autenticado
      * @param bdOk     true si la BD está conectada
-     * @param esAdmin  true si el usuario tiene rol de administrador
+     * @param esAdmin  true si el usuario tiene rol ADMIN
      */
-    public void iniciarSesion(String nombre, String rol, boolean bdOk, boolean esAdmin) {
-        this.nombreUsuario = nombre;
-        this.rolUsuario    = rol;
-        this.bdConectada   = bdOk;
-        this.esAdmin       = esAdmin;
+    public void iniciarSesion(Persona persona, boolean bdOk, boolean esAdmin) {
+        this.personaEnSesion = persona;
+        this.nombreUsuario   = persona.getNombre();
+        this.rolUsuario      = persona.getRol().getNombre();
+        this.bdConectada     = bdOk;
+        this.esAdmin         = esAdmin;
 
         actualizarCabecera();
         actualizarFooter();
+
+        // Ajustamos qué botones del menú están activos según los permisos del rol
+        aplicarPermisosMenu();
 
         // Cargamos el dashboard inicial según el rol
         if (esAdmin) {
@@ -176,12 +181,11 @@ public class MainController {
     }
 
     // ─────────────────────────────────────────────────────────
-    // NAVEGACIÓN — métodos @FXML vinculados a los botones del menú
+    // NAVEGACIÓN
     // ─────────────────────────────────────────────────────────
 
     @FXML
     public void mostrarInicio() {
-        // El botón "Inicio" del menú vuelve al dashboard del rol del usuario
         if (esAdmin) {
             cargarVista(FXML_DASHBOARD_ADMIN, "> INICIO");
         } else {
@@ -214,9 +218,18 @@ public class MainController {
         cargarVista(FXML_MOTOR, "> PROYECTOS > Motor de Asignación");
     }
 
+    /**
+     * Carga Mis Tareas y le inyecta la Persona en sesión al controlador.
+     * Es el único caso donde necesitamos el controlador tras la carga.
+     */
     @FXML
     public void mostrarMisTareas() {
-        cargarVista(FXML_MIS_TAREAS, "> MI PERFIL > Tareas Personales");
+        FXMLLoader loader = cargarVista(FXML_MIS_TAREAS, "> MI PERFIL > Tareas Personales");
+
+        if (loader != null && personaEnSesion != null) {
+            MisTareasController ctrl = loader.getController();
+            ctrl.setPersona(personaEnSesion);
+        }
     }
 
     @FXML
@@ -226,14 +239,8 @@ public class MainController {
 
     @FXML
     public void mostrarRolesPermisos() {
-        cargarVista(FXML_ROLES_SISTEMA, "> ADMINISTRACIÓN > Roles de sistema");
+        cargarVista(FXML_ROLES_SISTEMA, "> ADMINISTRACIÓN > Roles y Permisos");
     }
-
-    @FXML
-    public void mostrarPermisos() {
-        cargarVista(FXML_PERMISOS, "> ADMINISTRACIÓN > Permisos");
-    }
-
 
     @FXML
     public void mostrarConfiguracion() {
@@ -244,10 +251,6 @@ public class MainController {
     // ICONOS DE CABECERA
     // ─────────────────────────────────────────────────────────
 
-    /**
-     * Abre la ventana "Acerca de" como modal.
-     * Vinculado al ImageView img_about via onMouseClicked="#abrirAbout"
-     */
     @FXML
     public void abrirAbout(MouseEvent event) {
         try {
@@ -259,7 +262,6 @@ public class MainController {
             aboutStage.setScene(scene);
             aboutStage.setResizable(false);
             aboutStage.initModality(Modality.APPLICATION_MODAL);
-            // Ancla el modal a la ventana principal
             Stage owner = (Stage) contentArea.getScene().getWindow();
             aboutStage.initOwner(owner);
             aboutStage.showAndWait();
@@ -269,10 +271,6 @@ public class MainController {
         }
     }
 
-    /**
-     * Confirma y cierra la aplicación completamente.
-     * Vinculado al ImageView img_exit via onMouseClicked="#salirAplicacion"
-     */
     @FXML
     public void salirAplicacion(MouseEvent event) {
         Alert confirmacion = new Alert(Alert.AlertType.CONFIRMATION);
@@ -288,76 +286,121 @@ public class MainController {
     }
 
     // ─────────────────────────────────────────────────────────
-    // MÉTODOS PRIVADOS — lógica interna
+    // LÓGICA DE PERMISOS DEL MENÚ
     // ─────────────────────────────────────────────────────────
 
     /**
-     * Carga un archivo FXML en el AnchorPane central y actualiza
-     * el pasillo de navegación en la cabecera.
+     * Lee los permisos del rol del usuario en sesión y activa/desactiva
+     * cada botón del menú lateral según si tiene acceso o no.
      *
-     * @param rutaFxml  Ruta del FXML dentro del classpath (empieza con /)
-     * @param pasillo   Texto que aparece en lbl_path_in_app (ej: "> PROYECTOS > Tareas")
+     * Un botón desactivado aparece semitransparente y no responde al clic.
      */
-    private void cargarVista(String rutaFxml, String pasillo) {
+    private void aplicarPermisosMenu() {
+        if (personaEnSesion == null || personaEnSesion.getRol() == null) return;
+
+        Long rolId = personaEnSesion.getRol().getId();
+
+        // Cargamos los códigos de permiso del rol desde la BD
+        Set<String> codigos = permisoService.obtenerPermisosPorRol(rolId)
+                .stream()
+                .map(p -> p.getCodigo())
+                .collect(Collectors.toSet());
+
+        // Mapeamos cada botón con su permiso correspondiente
+        aplicarEstadoBoton(btn_roles,          codigos, "CRUD_ROLES_PROFESIONALES");
+        aplicarEstadoBoton(btn_competencias,   codigos, "CRUD_COMPETENCIAS");
+        aplicarEstadoBoton(btn_profesionales,  codigos, "CRUD_PERSONAS");
+        aplicarEstadoBoton(btn_proyectos,      codigos, "CRUD_PROYECTOS");
+        aplicarEstadoBoton(btn_proy_motor,     codigos, "CALCULAR_ASIGNACION");
+        aplicarEstadoBoton(btn_my_tareas,      codigos, "VER_TAREAS_PROPIAS");
+        aplicarEstadoBoton(btn_admin_user,     codigos, "CRUD_USUARIOS_SISTEMA");
+        aplicarEstadoBoton(btn_admin_roles,    codigos, "CRUD_ROLES_SISTEMA");
+        aplicarEstadoBoton(btn_configuration,  codigos, "CRUD_ROLES_SISTEMA");
+        // btn_inicio siempre habilitado (VER_DASHBOARD lo tienen todos)
+    }
+
+    /**
+     * Activa o desactiva un botón del menú según si el conjunto de permisos
+     * contiene el código requerido.
+     *
+     * @param boton    Botón del menú lateral
+     * @param codigos  Set de códigos de permiso del usuario en sesión
+     * @param permiso  Código de permiso requerido para este botón
+     */
+    private void aplicarEstadoBoton(Button boton, Set<String> codigos, String permiso) {
+        if (boton == null) return;
+
+        boolean tieneAcceso = codigos.contains(permiso);
+        boton.setDisable(!tieneAcceso);
+        // Reducimos la opacidad para dar feedback visual de que está bloqueado
+        boton.setOpacity(tieneAcceso ? 1.0 : 0.4);
+    }
+
+    // ─────────────────────────────────────────────────────────
+    // MÉTODOS PRIVADOS — carga de vistas
+    // ─────────────────────────────────────────────────────────
+
+    /**
+     * Carga un FXML en el AnchorPane central y devuelve el FXMLLoader
+     * para que el llamador pueda acceder al controlador si lo necesita.
+     *
+     * @param rutaFxml  Ruta del FXML dentro del classpath
+     * @param pasillo   Texto de navegación para la cabecera
+     * @return FXMLLoader con el controlador ya inicializado, o null si falló
+     */
+    private FXMLLoader cargarVista(String rutaFxml, String pasillo) {
         try {
             FXMLLoader loader = new FXMLLoader(getClass().getResource(rutaFxml));
+            loader.setControllerFactory(SpringContext::getBean);
             Node vista = loader.load();
 
-            // Ajusta la vista para que ocupe todo el AnchorPane
-            AnchorPane.setTopAnchor(vista, 0.0);
+            AnchorPane.setTopAnchor(vista,    0.0);
             AnchorPane.setBottomAnchor(vista, 0.0);
-            AnchorPane.setLeftAnchor(vista, 0.0);
-            AnchorPane.setRightAnchor(vista, 0.0);
+            AnchorPane.setLeftAnchor(vista,   0.0);
+            AnchorPane.setRightAnchor(vista,  0.0);
 
             contentArea.getChildren().setAll(vista);
             lbl_path_in_app.setText(pasillo);
 
+            return loader;
+
         } catch (IOException e) {
-            // Si el FXML no existe todavía, mostramos un placeholder en vez de crashear
             mostrarPlaceholder(pasillo, rutaFxml);
             lbl_path_in_app.setText(pasillo);
+            return null;
         }
     }
 
-    /**
-     * Muestra un Label provisional cuando el FXML de una sección aún
-     * no está implementado. Así el menú funciona sin errores.
-     */
     private void mostrarPlaceholder(String titulo, String rutaFxml) {
         Label placeholder = new Label("🚧  Vista en construcción\n\n" + titulo
                 + "\n\nFXML: " + rutaFxml);
         placeholder.setStyle("-fx-font-size: 18px; -fx-text-fill: #888; "
                 + "-fx-alignment: center; -fx-text-alignment: center;");
 
-        AnchorPane.setTopAnchor(placeholder, 0.0);
+        AnchorPane.setTopAnchor(placeholder,    0.0);
         AnchorPane.setBottomAnchor(placeholder, 0.0);
-        AnchorPane.setLeftAnchor(placeholder, 0.0);
-        AnchorPane.setRightAnchor(placeholder, 0.0);
+        AnchorPane.setLeftAnchor(placeholder,   0.0);
+        AnchorPane.setRightAnchor(placeholder,  0.0);
 
         contentArea.getChildren().setAll(placeholder);
     }
 
-    /**
-     * Rellena los labels de la cabecera con los datos de sesión actuales
-     * y actualiza el icono de estado de la BD.
-     */
+    // ─────────────────────────────────────────────────────────
+    // MÉTODOS PRIVADOS — cabecera / footer
+    // ─────────────────────────────────────────────────────────
+
     private void actualizarCabecera() {
         if (lbl_user != null)         lbl_user.setText(nombreUsuario);
         if (lbl_system_group != null) lbl_system_group.setText(rolUsuario);
 
-        // Fecha del día formateada en español
         if (lbl_date != null) {
-            DateTimeFormatter fmt = DateTimeFormatter.ofPattern("EEE dd MMM yyyy", new Locale("es", "ES"));
+            DateTimeFormatter fmt = DateTimeFormatter.ofPattern("EEE dd MMM yyyy", Locale.of("es", "ES"));
             lbl_date.setText(LocalDate.now().format(fmt));
         }
 
-        // Icono BD: verde si conectado, rojo si no
         actualizarIconoBD(img_db_status);
     }
 
-    /**
-     * Rellena los labels del footer con el estado de BD y la hora de inicio de sesión.
-     */
     private void actualizarFooter() {
         actualizarIconoBD(img_footer_db_status);
 
@@ -371,10 +414,6 @@ public class MainController {
         }
     }
 
-    /**
-     * Cambia el icono de BD según el estado de conexión.
-     * Reutilizable para cabecera y footer.
-     */
     private void actualizarIconoBD(ImageView iconView) {
         if (iconView == null) return;
         String ruta = bdConectada
@@ -387,9 +426,6 @@ public class MainController {
         }
     }
 
-    /**
-     * Muestra un diálogo de error simple.
-     */
     private void mostrarError(String mensaje) {
         Alert alert = new Alert(Alert.AlertType.ERROR);
         alert.setTitle("Error");
